--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@ $(document).ready(function () {
 
 <h1 class="title toc-ignore">index</h1>
 <h4 class="author">Assa Yeroslaviz</h4>
-<h4 class="date">11 December, 2019</h4>
+<h4 class="date"><strong>last update</strong> - 16 December, 2019</h4>
 
 </div>
 
@@ -340,40 +340,47 @@ $(document).ready(function () {
 <p>The file will contains instruction on how to create a conda environment with the needed tools for the mapping and will also include snakemake for the automation of the scripts.</p>
 <div id="steps-to-do" class="section level2">
 <h2>steps to do</h2>
+<p><strong>Preparing the genomes for mapping</strong></p>
 <ol style="list-style-type: decimal">
-<li><p>get the genomes and the annotations from the FTP server (I am using Ensembl)</p></li>
-<li><p>unpack them</p></li>
-<li><p>create an index for each needed mapper (in the snakemake file I am adding STAR, bowtie2, and bwa)</p></li>
-<li><p>map tha samples with the needed parameter.</p></li>
-<li><p>index the fastA file to create a chromSize file for the bigwig files.</p></li>
-<li><p>convert the bam files to wig and then to bigwig.</p></li>
+<li>Download the genomes and the annotations from the FTP server (Ensembl genome builds are used here.)</li>
+<li>For each genome, an index for the <code>star</code> aligner is created.</li>
 </ol>
-<p>points to consider:</p>
+<p>This two steps are done only once, when the workflow was set-up. It only needs to be re-run, when a new organism is beinf added, or when newer version of exiting organisms are needed.</p>
+<p><strong>Mapping step</strong></p>
+<ol start="3" style="list-style-type: decimal">
+<li>Map tha samples with the needed parameter.</li>
+<li>Index the fastA file to create a <code>chromSize</code> file for the <code>bigwig</code> conversion.</li>
+<li>Convert the <code>bam</code> files to <code>wig</code> and then to <code>bigwig</code>.</li>
+</ol>
+<p>points to consider: If this is only a preliminary analysis -</p>
 <ol style="list-style-type: decimal">
-<li>would it make more sense to take only 50% of the fastq file for a faster analysis / visualization</li>
-<li>do they need the bam files also - deleting them would save a lot of storage space</li>
+<li>Would it make more sense to take only 50% of the fastq file for a faster analysis / visualization</li>
+<li>Do they need the bam files also - deleting them would save a lot of storage space</li>
 </ol>
-<p>The examples in this document are based on fictive data as well as a fictional project named Project0815. Whe na new project is done, this term must be changed with the proper name of the project, wherever it is mentioned.</p>
+<p>The examples in this document are based on fictive data as well as a fictional project named <em>Project0815</em>. When a new project is done, this term must be changed with the proper name of the project, wherever it is mentioned.</p>
 </div>
 <div id="folder-structure" class="section level2">
 <h2>folder structure</h2>
-<p>each project must be stored in a specific folder struture for the workflow to work properly.</p>
-<p>The convention for the naming in the MPIB Seqencing center is as such P01, P02, .. P135, … Therefore the folder structure should be like that:</p>
-<pre><code>.
-├── Analysis
-├── rawData
-├── scripts
-└── genome</code></pre>
-<p>The only folder which must be created manually is the <code>rawData</code> folder where all the fastq files must be then saved.</p>
-<pre class="bash"><code>mkdir -p Project0815/{rawData,Analysis,scripts,genome}</code></pre>
-<p>The workflow will use a combination of a <code>conda</code> environment with the <code>snakemake</code> tool (based on python). The advantage of <code>conda</code> is that it creates a container, separated from the rest of the tools installed on the system. This give a better menangment and control over the tools used in the workflow, as well as less conflict potentials with other/older version of tools with non-compatible parameters. To learn more about the conda environment and its advantages, take a look at the <a href="https://conda.io/en/latest/">conda web site</a>.</p>
-<p><code>sankemake</code> offers a lot of advantages as well. It allows better controls over different steps of the analysis, easier automation of the workflow and reduce running time thorugh parallelization of he steps, just to mention some of them. to learn more about <code>snakemake</code> take a look <a href="https://snakemake.readthedocs.io/en/stable/index.html">at the snakemake doc site</a>.</p>
-<div id="workflow" class="section level3">
-<h3>workflow</h3>
+<p>The workflow works from within the folder of the concatenated <code>fastq</code> files created after running the <code>bcl2fastq</code> script from the project management website.</p>
+<ul>
+<li>A <code>config</code> file is saved under <code>"/fs/pool/pool-bcfngs/scripts/config.yaml"</code>, where all the mapping and genome parameters are saved.</li>
+<li>The genome indexing step is run only once and creates a folder named <code>genomes/</code> on the <code>"/fs/pool/pool-bcfngs/"</code>. Within this folder all the <code>fastA</code> and the <code>gtf</code> files are saved as well as a folder for each organims, containing the <code>star</code>-indexed files.</li>
+<li>The mapping step expect to find within the working directory the files with the pattern <em>.conc.R1.fastq.gz</em> (As this is the current pattern given by the sequencing facility. If, in the future, this will be changed, the search pattern must be changed as well).</li>
+</ul>
+<p>There are two seperate files for single-ended and paired-ended data sets. The single-ended one expects to find only <em>.conc.R1.fastq.gz</em> , while the paired-end data set must also contain <em>.conc.R2.fastq.gz</em> files.</p>
+</div>
+<div id="workflow" class="section level2">
+<h2>Workflow</h2>
+<p>The workflow uses a combination of a <code>conda</code> environment with the <code>snakemake</code> tool (based on python). The advantage of <code>conda</code> is that it creates a container, separated from the rest of the tools installed on the system. This gives a better manangement and control over the tools used in the workflow, as well as less conflict potentials with other/older version of tools with non-compatible parameters. To learn more about the conda environment and its advantages, take a look at the <a href="https://conda.io/en/latest/">conda web site</a>.</p>
+<p><code>snakemake</code> offers a lot of advantages as well. It allows better controls over different steps of the analysis, easier automation of the workflow and reduce running time thorugh parallelization of the steps, just to mention some of them. to learn more about <code>snakemake</code> take a look at <a href="https://snakemake.readthedocs.io/en/stable/index.html">the snakemake doc site</a>.</p>
 <ul>
 <li><a href="conda.html">conda</a></li>
 <li><a href="snakemake.html">snakemake</a></li>
 </ul>
+<div id="wigtobigwig" class="section level3">
+<h3>wigToBigwig</h3>
+<p>First the <code>bam</code> files are converted into <code>wig</code> files. This is done using the <code>bam2wig.py</code> script from the <code>rseqc</code>-software package.<br />
+In order for the automatic conversion of <code>wig</code> to <code>bigwig</code> files to work, one must have the tool <code>wigToBigwig</code> from the UCSC repository installed and <strong>in the path</strong>. As we are working with conda, the easiest plce to put it is the the path of the environment. In out case, as we are working with <code>miniconda</code> the path would be under <code>/fs/home/USERNAME/miniconda3/envs/ENVNAME/bin/</code>. Sofar I have copied the file manually to the folder, but I have now added it to the environment.yaml file, which is ran during the environment creation step. This was not tested yet!.</p>
 <p>TO DO</p>
 <p>In this case it would probably be better if the indexed geneomes would already be saved on the server for various organisms, as it doesn’t make sense to download one each time. We sort of know which organisms are needed in most cases</p>
 <ol style="list-style-type: decimal">
