--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@ needed in most cases.</p>
 <p>new genome built were added to the workflow</p>
 <ul>
 <li><em>D. melanogaster</em> - <code>BDGP6.28</code></li>
-<li><em>E. coli</em> - HUSEC2011CHR1</li>
+<li><em>E. coli</em> - <code>HUSEC2011CHR1</code></li>
 <li><em>D. pseudoobscura</em> - <code>3.0.49</code></li>
 <li><em>C. elegans</em> - <code>WBcel 2.35</code></li>
 </ul>
